Defer resetting identity transform of the drag window from top until it has been snapped.

We did defer resetting the transform to identity of the drag window from
overview items until it has been snapped. In order to avoid the weird
transform if trying to snap an arc window.

Previous cl:
https://chromium-review.googlesource.com/c/chromium/src/+/910076

We should do the same thing if we try to snap a window through drag from
the top.
Changes in this cl,
- Do not restore the drag window's transform to identity when end window
   drag if the window should be snapped or drop into overview.

- Restore identity transform after window has been snapped. Calculate a
  starting transform for the to-be-snapped window based on its transformed
  bounds before to be snapped.

- Move the logic of GetTransformedBounds and GetTopInset to overview_util.

Bug: 872538
Change-Id: Icc2f034e0752fba4ba8ec673022e1f9306ca35b2
Reviewed-on: https://chromium-review.googlesource.com/1178385
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586030}
Former-commit-id: 96202134de7888d656d60d8d04752ea6f9f94c4d